crates/lang/macro/tests/ui/trait_def/fail/message_payable_invalid_2.stderr
error: unknown ink! attribute argument (name = value)
 --> $DIR/message_payable_invalid_2.rs:5:20
  |
5 |     #[ink(message, payable = true)]
  |                    ^^^^^^^^^^^^^^
